@@ -6,13 +6,13 @@ Desc=暗色系界面
 
 [SkinFont]
 FontSize=15
-TipColor=255 255 255
-InputColor=118 147 255
-IndexColor=118 147 255
+TipColor=162 181 255
+InputColor=220 220 220
+IndexColor=180 180 180
 FirstCandColor=118 147 255
-UserPhraseColor=255 255 255
-CodeColor=118 147 255
-OtherColor=255 255 255
+UserPhraseColor=255 255 143
+CodeColor=255 255 255
+OtherColor=220 220 220
 
 [SkinMainBar]
 #主窗口背景图和掩图
