@@ -1,3 +1,7 @@
+2010-09-06: CSSlayer <wengxt@gmail.com>
+    * 调整libfcitx-config，方便GUI开发
+	* 调整dark的一些字体颜色，感谢jason52lh
+
 2010-09-02: CSSlayer <wengxt@gmail.com>
 	* 调整libfcitx-config的函数
 
